<resources>
    <string name="resources_language">en</string>
    <string name="resources_country_code">US</string>
    <string name="resources_script">Latn</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="black_them">Black Theme</string>
    <string name="status_theme">Status.im Theme</string>
    <string name="notification_sync_init">Initializing service</string>
    <string name="notification_sync_in_progress">Synchronising…</string>
    <string name="notification_listening_for_events">Listening for events</string>
    <string name="notification_noisy_notifications">Noisy notifications</string>
    <string name="notification_silent_notifications">Silent notifications</string>
    <string name="title_activity_home">Messages</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_member_details">Member Details</string>
    <string name="title_activity_historical">Historical</string>
    <string name="title_activity_bug_report">Bug report</string>
    <string name="title_activity_group_details">Community details</string>
    <string name="title_activity_choose_sticker">Send a sticker</string>
    <string name="title_activity_keys_backup_setup">Key Backup</string>
    <string name="title_activity_keys_backup_restore">Use Key Backup</string>
    <string name="title_activity_verify_device">Verify session</string>
    <string name="keys_backup_is_not_finished_please_wait">Keys backup is not finished, please wait…</string>
    <string name="sign_out_bottom_sheet_warning_no_backup">You’ll lose your encrypted messages if you sign out now</string>
    <string name="sign_out_bottom_sheet_warning_backing_up">Key backup in progress. If you sign out now you’ll lose access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_warning_backup_not_active">Secure Key Backup should be active on all of your sessions to avoid losing access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_dont_want_secure_messages">I don’t want my encrypted messages</string>
    <string name="sign_out_bottom_sheet_backing_up_keys">Backing up keys…</string>
    <string name="keys_backup_activate">Use Key Backup</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="backup">Back up</string>
    <string name="sign_out_bottom_sheet_will_lose_secure_messages">You’ll lose access to your encrypted messages unless you back up your keys before signing out.</string>
    <string name="dialog_title_third_party_licences">Third party licences</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="send">Send</string>
    <string name="copy">Copy</string>
    <string name="resend">Resend</string>
    <string name="redact">Remove</string>
    <string name="quote">Quote</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="speak">Speak</string>
    <string name="clear">Clear</string>
    <string name="later">Later</string>
    <string name="forward">Forward</string>
    <string name="permalink">Permalink</string>
    <string name="view_source">View Source</string>
    <string name="view_decrypted_source">View Decrypted Source</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="none">None</string>
    <string name="revoke">Revoke</string>
    <string name="disconnect">Disconnect</string>
    <string name="report_content">Report content</string>
    <string name="active_call">Active call</string>
    <string name="ongoing_conference_call">Ongoing conference call.\nJoin as %1$s or %2$s</string>
    <string name="ongoing_conference_call_voice">Voice</string>
    <string name="ongoing_conference_call_video">Video</string>
    <string name="cannot_start_call">Cannot start the call, please try later</string>
    <string name="missing_permissions_warning">"Due to missing permissions, some features may be missing…</string>
    <string name="missing_permissions_error">"Due to missing permissions, this action is not possible.</string>
    <string name="missing_permissions_to_start_conf_call">You need permission to invite to start a conference in this room</string>
    <string name="missing_permissions_title_to_start_conf_call">Cannot start call</string>
    <string name="device_information">Session information</string>
    <string name="room_no_conference_call_in_encrypted_rooms">Conference calls are not supported in encrypted rooms</string>
    <string name="call_anyway">Call Anyway</string>
    <string name="send_anyway">Send Anyway</string>
    <string name="or">or</string>
    <string name="invite">Invite</string>
    <string name="offline">Offline</string>
    <string name="accept">Accept</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="abort">Abort</string>
    <string name="ignore">Ignore</string>
    <string name="review">Review</string>
    <string name="decline">Decline</string>
    <string name="action_exit">Exit</string>
    <string name="actions">Actions</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_out_confirmation_simple">Are you sure you want to sign out?</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_global_search">Global search</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_historical">Historical</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_mark_room_read">Mark as read</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="disable">Disable</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_error">Error</string>
    <string name="bottom_action_home">Home</string>
    <string name="bottom_action_favourites">Favourites</string>
    <string name="bottom_action_people">People</string>
    <string name="bottom_action_rooms">Rooms</string>
    <string name="bottom_action_groups">Communities</string>
    <string name="home_filter_placeholder_home">Filter room names</string>
    <string name="home_filter_placeholder_favorites">Filter favourites</string>
    <string name="home_filter_placeholder_people">Filter people</string>
    <string name="home_filter_placeholder_rooms">Filter room names</string>
    <string name="home_filter_placeholder_groups">Filter community names</string>
    <string name="invitations_header">Invites</string>
    <string name="low_priority_header">Low priority</string>
    <string name="system_alerts_header">"System Alerts"</string>
    <string name="direct_chats_header">Conversations</string>
    <string name="local_address_book_header">Local address book</string>
    <string name="user_directory_header">User directory</string>
    <string name="send_bug_report">Report bug</string>
    <string name="room_menu_search">Search</string>
    <string name="room_resend_unsent_messages">Resend unsent messages</string>
    <string name="room_delete_unsent_messages">Delete unsent messages</string>
    <string name="room_details_title">Room Details</string>
    <string name="room_settings_favourite">Favourite</string>
    <string name="room_settings_de_prioritize">De-prioritize</string>
    <string name="room_settings_leave_conversation">Leave Conversation</string>
    <string name="room_sliding_menu_messages">Messages</string>
    <string name="room_sliding_menu_settings">Settings</string>
    <string name="room_sliding_menu_version">Version</string>
    <string name="room_sliding_menu_term_and_conditions">Terms &amp; conditions</string>
    <string name="room_sliding_menu_third_party_notices">Third party notices</string>
    <string name="room_sliding_menu_privacy_policy">Privacy policy</string>
    <string name="settings_profile_picture">Profile Picture</string>
    <string name="settings_display_name">Display Name</string>
    <string name="settings_enable_all_notif">Enable notifications for this account</string>
    <string name="settings_enable_this_device">Enable notifications for this session</string>
    <string name="settings_turn_screen_on">Turn the screen on for 3 seconds</string>
    <string name="settings_messages_in_one_to_one">Msgs in one-to-one chats</string>
    <string name="settings_messages_in_group_chat">Msgs in group chats</string>
    <string name="settings_invited_to_room">When I’m invited to a room</string>
    <string name="settings_call_invitations">Call invitations</string>
    <string name="settings_messages_sent_by_bot">Messages sent by bot</string>
    <string name="settings_background_sync">Background synchronization</string>
    <string name="settings_enable_background_sync">Enable background sync</string>
    <string name="settings_set_sync_timeout">Sync request timeout</string>
    <string name="settings_set_sync_delay">Delay between each Sync</string>
    <string name="settings_version">Version</string>
    <string name="settings_app_term_conditions">Terms &amp; conditions</string>
    <string name="settings_third_party_notices">Third party notices</string>
    <string name="settings_copyright">Copyright</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_user_settings">User settings</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_ignored_users">Ignored users</string>
    <string name="settings_other">Other</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_notifications_targets">Notification Targets</string>
    <string name="settings_logged_in">Logged in as</string>
    <string name="settings_home_server">Home Server</string>
    <string name="settings_identity_server">Identity Server</string>
    <string name="settings_change_password">Change password</string>
    <string name="encryption_information_device_info">Event information</string>
    <string name="encryption_information_user_id">User id</string>
    <string name="encryption_information_curve25519_identity_key">Curve25519 identity key</string>
    <string name="encryption_information_claimed_ed25519_fingerprint_key">Claimed Ed25519 fingerprint key</string>
    <string name="encryption_information_algorithm">Algorithm</string>
    <string name="encryption_information_session_id">Session ID</string>
    <string name="encryption_information_decryption_error">Decryption error</string>
    <string name="encryption_information_sender_device_information">Sender session information</string>
    <string name="encryption_information_name">Public name</string>
    <string name="encryption_information_device_id">ID</string>
    <string name="encryption_information_verification">Verification</string>
    <string name="encryption_information_ed25519_fingerprint">Ed25519 fingerprint</string>
    <string name="encryption_information_unknown_device">unknown session</string>
    <string name="room_widget_reload">Reload widget</string>
    <string name="room_widget_open_in_browser">Open in browser</string>
    <string name="room_widget_revoke_access">Revoke access for me</string>
    <string name="room_add_matrix_apps">Add Matrix apps</string>
</resources>