<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/account_group">
        <item
            android:id="@+id/sliding_menu_roles"
            android:icon="@drawable/ic_work"
            android:title="@string/room_sliding_menu_role" />

        <item
            android:id="@+id/sliding_menu_messages"
            android:icon="@drawable/logo_transparent"
            android:title="@string/room_sliding_menu_messages"
            android:visible="@bool/show_message_navigation_bar"/>

        <item
            android:id="@+id/sliding_menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/room_sliding_menu_settings" />

        <item
            android:id="@+id/sliding_menu_send_bug_report"
            android:icon="@drawable/ic_material_bug_report"
            android:title="@string/send_bug_report"
            android:visible="@bool/show_report_bug_navigation_bar" />

        <item
            android:id="@+id/sliding_menu_exit"
            android:icon="@drawable/ic_power_settings"
            android:title="@string/action_exit"
            android:visible="@bool/show_exit_navigation_bar" />

        <item
            android:id="@+id/sliding_menu_sign_out"
            android:icon="@drawable/ic_material_exit_to_app"
            android:title="@string/action_sign_out"
            android:visible="@bool/show_sign_out_navigation_bar" />
    </group>

    <group android:id="@+id/app_group">
        <item
            android:id="@+id/sliding_menu_app_tac"
            android:title="@string/room_sliding_menu_term_and_conditions" />

        <item
            android:id="@+id/sliding_menu_privacy_policy"
            android:title="@string/room_sliding_menu_privacy_policy" />

        <item
            android:id="@+id/sliding_menu_third_party_notices"
            android:title="@string/room_sliding_menu_third_party_notices"
            android:visible="@bool/settings_third_party_notice_visible" />

        <item
            android:id="@+id/sliding_acknowledgement"
            android:title="@string/room_sliding_menu_credit" />

        <item
            android:id="@+id/sliding_menu_version"
            android:title="@string/room_sliding_menu_version" />
    </group>

    <group android:visible="@bool/debug_mode">
        <item
            android:id="@+id/sliding_menu_debug"
            android:title="@string/debug_screen" />
    </group>
</menu>