<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_action_home" />
    <item
        android:id="@+id/bottom_action_favourites"
        android:enabled="true"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/bottom_action_favourites" />
    <item
        android:id="@+id/bottom_action_people"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/bottom_action_people" />
    <item
        android:id="@+id/bottom_action_rooms"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/bottom_action_rooms" />
</menu>