<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/encryption_information_device_info"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/encryption_information_user_id"/>

        <TextView
            android:id="@+id/encrypted_info_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="an user id"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/encryption_information_curve25519_identity_key"/>

        <TextView
            android:id="@+id/encrypted_info_curve25519_identity_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="a Curve25519 identity key"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/encryption_information_claimed_ed25519_fingerprint_key"/>

        <TextView
            android:id="@+id/encrypted_info_claimed_ed25519_fingerprint_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="a Claimed Ed25519 fingerprint key"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/encryption_information_algorithm"/>

        <TextView
            android:id="@+id/encrypted_info_algorithm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="an algorithm"/>

        <TextView
            android:id="@+id/encrypted_info_decryption_error_label"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/encryption_information_decryption_error"/>

        <TextView
            android:id="@+id/encrypted_info_decryption_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="an error"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/encryption_information_session_id"/>

        <TextView
            android:id="@+id/encrypted_info_session_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="a session id"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/encryption_information_sender_device_information"/>

        <LinearLayout
            android:id="@+id/encrypted_info_no_device_information_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textStyle="italic"
                android:text="@string/encryption_information_unknown_device"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/encrypted_info_sender_device_information_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/encryption_information_name"/>

            <TextView
                android:id="@+id/encrypted_info_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="a name"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/encryption_information_device_id"/>

            <TextView
                android:id="@+id/encrypted_info_device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="a device id"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/encryption_information_verification"/>

            <TextView
                android:id="@+id/encrypted_info_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="a Verification"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/encryption_information_ed25519_fingerprint"/>

            <TextView
                android:id="@+id/encrypted_ed25519_fingerprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="a Ed25519 fingerprint"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>